<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardBackgroundColor="#BFDDF4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:src="@drawable/profile"
            app:civ_border_color="#FF000000" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPrev"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/ic_baseline_arrow_back_ios_24"/>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/fullname"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/course"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/button"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/twitterDescription"
        android:onClick="doSometing"
        android:src="@drawable/twitter"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/linkedInDescription"
        android:onClick="doSometing"
        android:src="@drawable/linkedin"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/fbDescription"
        android:onClick="doSometing"
        android:src="@drawable/facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/button4"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/githubDescription"
        android:onClick="doSometing"
        android:src="@drawable/github"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/button5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:src="@drawable/image3"/>
            <ImageButton
                android:id="@+id/button6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:src="@drawable/image1"/>
            <ImageButton
                android:id="@+id/button7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:src="@drawable/image4"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="150dp">
            <ImageButton
                android:id="@+id/button8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="25dp"
                android:layout_gravity="center"
                android:src="@drawable/image6"/>
            <ImageButton
                android:id="@+id/button9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="25dp"
                android:layout_gravity="center"
                android:src="@drawable/image7"/>

            <ImageButton
                android:id="@+id/button10"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:src="@drawable/image8" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>